force-app/main/default/objects/Account/fields/LastUpdatedcontact__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedcontact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>