force-app/main/default/objects/Account/fields/MESSENGER__Bank__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Bank__c</fullName>
    <label>Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>