force-app/main/default/objects/Account/fields/MESSENGER__IBAN__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__IBAN__c</fullName>
    <label>IBAN</label>
    <length>34</length>
    <type>Text</type>
</CustomField>