force-app/main/default/objects/Account/fields/MESSENGER__is_EuroMoebel_Account__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__is_EuroMoebel_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is EuroMoebel Account</label>
    <type>Checkbox</type>
</CustomField>