force-app/main/default/objects/Account/fields/MESSENGER__Local_VAT__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Local_VAT__c</fullName>
    <label>Local VAT %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>