force-app/main/default/objects/Account/fields/MESSENGER__Phone__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>