force-app/main/default/objects/Account/fields/MESSENGER__USTRNr__c.field-meta.xml
<CustomField>
    <fullName>MESSENGER__USTRNr__c</fullName>
    <label>USTRNr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>