force-app/main/default/objects/Account/fields/Num_of_Con__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Con__c</fullName>
    <label>Num_of_Con</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>