force-app/main/default/objects/Account/fields/NumberOfTotalContact__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTotalContact__c</fullName>
    <label>NumberOfTotalContact</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>