force-app/main/default/objects/Account/fields/Rollup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Amount__c</fullName>
    <label>Rollup_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>