force-app/main/default/objects/Account/fields/Rollup_Amount_X__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Amount_X__c</fullName>
    <label>Rollup_Amount_X</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>