force-app/main/default/objects/Account/fields/tdc_tra__Number_Of_closed_won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Number_Of_closed_won_Opportunities__c</fullName>
    <label>Number Of closed won Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>