force-app/main/default/objects/Account/fields/tdc_tra__Number_Of_Open_Cases_in_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Number_Of_Open_Cases_in_Current_Month__c</fullName>
    <label>Number Of Open Cases in Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>