force-app/main/default/objects/Account/fields/tdc_tra__Number_Of_Open_Task__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Number_Of_Open_Task__c</fullName>
    <label>Number Of Open Task</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>