force-app/main/default/objects/Account/fields/Total_Amount_Contact__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Contact__c</fullName>
    <label>Total Amount Contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>