force-app/main/default/objects/Account/fields/Total_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities__c</fullName>
    <label>Total Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>